# MinecraftWebhook-rust

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/minecraft/: mod.rs  rcon.rs
src/webui/: mod.rs  site.html
